<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">ZarooriBox</string>
    <string name="title_activity_main">ZarooriBox</string>
    <string name="package_name">app.zaroori</string>
    <string name="custom_url_scheme">app.zaroori</string>
    <string name="shortcut_voice_short">Add by voice</string>
    <string name="shortcut_voice_long">Add a reminder by voice</string>
    <string name="shortcut_scan_short">Scan document</string>
    <string name="shortcut_scan_long">Scan a bill or document</string>
    <string name="shortcut_shopping_short">Shopping list</string>
    <string name="shortcut_shopping_long">Open the shopping list</string>
    <string name="share_label">Add to ZarooriBox</string>
    <string name="widget_title">ZarooriBox · Today</string>
    <string name="widget_description">Today\'s medicines and reminders</string>
    <string name="widget_add">Add a reminder</string>
    <string name="widget_empty">Nothing due today 🎉</string>
    <string name="widget_open_app">Open ZarooriBox to see today</string>
    <string name="widget_overdue">Overdue</string>
    <string name="widget_more">+ %1$d more</string>
</resources>
